fix: add header flex-wrap

--- a/eco-sounds/style.css
+++ b/eco-sounds/style.css
@@ -1,141 +1,142 @@
 @font-face {
-    font-family: Roboto;
-    src: url("assets/fonts/Roboto-Regular.ttf");
-    font-weight: 400;
-  }
-
-
-html {
-    height: 100%;
+  font-family: Roboto;
+  src: url("assets/fonts/Roboto-Regular.ttf");
+  font-weight: 400;
 }
 
-p, h1, h2, h3 {
-    margin: 0;
-    padding: 0;
-  }
+html {
+  height: 100%;
+}
+
+p,
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: Roboto;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #000;
-    color: #fff;
-    font-size: 28px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #000;
+  color: #fff;
+  font-size: 28px;
+  font-family: Roboto;
 }
 
 .container {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 30px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .header-container {
-    min-height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  min-height: 70px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+
 }
 .logo {
-    width: 50px;
-    height: 50px;
-    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+  height: 50px;
+  width: 50px;
+
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
     contrast(87%);
 }
 .logo:hover {
-    filter: none;
-  }
-
+  filter: none;
+}
 
 .nav-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0;
 }
 .nav-item {
-    margin: 0 20px;
-    cursor: pointer;
-    transition: 0.5ms 
+  margin: 0 20px;
+  cursor: pointer;
+  transition: 0.5ms;
 }
 
 .nav-item:hover {
-    color: #bdae82;
+  color: #bdae82;
 }
 
 .nav-item.active {
-    color: #bdae82;
+  color: #bdae82;
 }
 
-
 .nav :last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .main {
-    position: relative;
-    background-image: url('./assets/img/forest.jpg');
-    background-size: cover;
-    flex-grow: 1;
+  position: relative;
+  background-image: url("./assets/img/forest.jpg");
+  background-size: cover;
+  flex-grow: 1;
 }
 .button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 160px;
-    height: 160px;
-    background-image: url('./assets/svg/play.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    border: none;
-    transition: 0.5ms;
-    cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 160px;
+  height: 160px;
+  background-image: url("./assets/svg/play.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  transition: 0.5ms;
+  cursor: pointer;
 }
 
 .button:hover {
-    width: 180px;
-    height: 180px;
+  width: 180px;
+  height: 180px;
 }
 
-.pause {  
-    background-image: url("./assets/svg/pause.svg");
-  }
-
+.pause {
+  background-image: url("./assets/svg/pause.svg");
+}
 
 .footer-container {
-    min-height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-
 .rss-logo {
-    width: 135px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(./assets/svg/rss.svg);
+  width: 135px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(./assets/svg/rss.svg);
 }
 
 .rss-logo:hover {
-    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
-      contrast(87%);
-  }
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+    contrast(87%);
+}
 
-  a {
-    transition: 0.5ms
-  }
+a {
+  transition: 0.5ms;
+}
 
- a:hover {
-     color: #bdae82;
- }
+a:hover {
+  color: #bdae82;
+}
